--- a/styles/SharingDashboard.module.css
+++ b/styles/SharingDashboard.module.css
@@ -2,7 +2,6 @@
   width: 100%;
   height: 100%;
   max-height: 100%;
-  padding: 120px 0 40px 0;
   color: black;
   display: flex;
   flex-flow: column nowrap;
@@ -10,7 +9,7 @@
 }
 
 .container > div {
-  background-color: #ffffff;
+  background-color: #ffffffee;
   width: 100%;
   border-radius: 0.5rem;
   padding: 1rem;
