--- a/styles/utilities/TitleStatus.module.css
+++ b/styles/utilities/TitleStatus.module.css
@@ -5,7 +5,7 @@
 
 .topGrid {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   gap: 0.1rem;
   justify-items: center;
   align-items: center;
